# itm

./: .gitignore
t10_django/: .gitignore  .~lock.ref_PY_45_Django_core.docx#  ref_PY_45_Django_core.docx
t10_django/balakirev/: .gitignore
t10_django/dev_env/: .gitignore
t10_django/dev_env/app1/: .gitignore
t4_if_else/: sol_game.py  solution1.py  solution2.py  solution3_robot.py  solution4.py  solution5_calc.py
t5_io/: context_manager.py  s1.py  s2_pandas.py  stdin_sample.py
t6_oop/: Car.py  MeansOfTransport.py  Moped.py  animals.py  calculators.py  car.py  carelements.py  meansoftransport.py  moped.py  sol1.py  sol_12.py  sol_tokenizer.py
t7_DB/: temp.sql  задача с ревью
t8_alch/sql_alchemy/: .env  requirements.tx
t8_alch/sql_alchemy/helper/: clients.json  delivery.json  emp.csv  employees.json  helper_load_data.py  orders.json  products.json  provider.json
t8_alch/sql_alchemy/src/: database.py  imp_models.py  main.py  models.py
t9_fastAPI/: .gitignore
t9_fastAPI/fast_api/: .gitignore  alembic.ini  pyproject.toml
t9_fastAPI/fast_api/src/: database.py  main.py  test.py
t9_fastAPI/fast_api/src/migrations/: env.py
t9_fastAPI/fast_api/src/migrations/versions/: 2024-03-07_message.py
t9_fastAPI/fast_api/src/operations/: models.py  router.py
t9_fastAPI/fast_api/src/pages/: router.py
t9_fastAPI/fast_api/src/tasks/: celery_task.py
t9_fastAPI/fast_api/src/templates/: upload.html
theme1/: solution1_1.py  solution1_2.py  solution1_3.py  solution1_4.py  solution1_5.py
theme2/: solution_1.py
theme3/: solution1.py  solution2.py
(+63 files in other folders)
